# sdvx_realtime_battle

./: .gitignore  Makefile  README.md  detect_core.py  obssocket.py  pyproject.toml  sdvx_arena.pyw  update.py
