[project]
name = "sdvx-arena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "imagehash>=4.3.2",
    "imageio>=2.37.0",
    "numpy>=2.3.3",
    "obsws-python>=1.8.0",
    "pillow>=11.3.0",
    "pyinstaller>=6.16.0",
    "requests>=2.32.5",
]
